FIX font on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0;
-  min-height: 100%;
+  height: auto;
   background: linear-gradient(185deg, #242424, #060606);
   background-size: 100%;
   -webkit-animation: background 0s ease infinite;
